--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						
 							<section id="two">
 								<div class="container">
-									<h3>Skill Summary</h3>
+									<h3>My Skills</h3>
 									<p> My analytical skillset includes:</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-laptop-code">Data mining<br />
