--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<a href="#" class="image"><img src="images/database.jpg" alt="" onclick="return false;"/></a>
 											<div class="inner">
 												<h4><a href="https://github.com/liyan1327/Database_SQL_R_shiny.git" target="_blank" rel="noopener">Database Design</a></h4>
-												<p> After building a SQL Server database using data collected from Meetup, I developed an interactive <span style="color: #4acaa8"><a href="https://liyan1327.shinyapps.io/Like-minded_Database_Project/" target="_blank" rel="noopener">shiny application</a></span> to provide group and activity recommendations, visualize events information, and enable users to network effectively</p>
+												<p> After building a SQL Server database using data collected from Meetup, an interactive <span style="color: #4acaa8"><a href="https://liyan1327.shinyapps.io/Like-minded_Database_Project/" target="_blank" rel="noopener">shiny application</a></span> was developed to provide group and activity recommendations, visualize events information, and enable users to network effectively</p>
 											</div>
 										</article>
 										<article>
