--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="images/favico.png" />
 	</head>
+	
 	<body class="is-preload">
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T8TKPTF"
@@ -111,21 +112,21 @@
 									<p>Following is a list of my top data analysis projects:</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/forecasting.jpg" alt="" onclick="return false;"/></a>
+											<a href="#" class="image" id="timeseries"><img src="images/forecasting.jpg" alt="" onclick="return false;"/></a>
 											<div class="inner">
-												<h4><a href="https://drive.google.com/file/d/1leeDS8DWs4Vs94RO8RxRQ7oZADjTmVts/view?usp=sharing" target="_blank" rel="noopener">Time Series Forecasting</a></h4>
+												<h4><a href="https://github.com/liyan1327/Time_Series_Forecasting.git" target="_blank" rel="noopener">Time Series Forecasting</a></h4>
 												<p>Generated Q3 EPS in 2019 forecast for Dollar Tree by analyzing FactSet data to extract insights on company, industry, macro economy, and potential risks</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/database.jpg" alt="" onclick="return false;"/></a>
+											<a href="#" class="image" id="database"><img src="images/database.jpg" alt="" onclick="return false;"/></a>
 											<div class="inner">
 												<h4><a href="https://github.com/liyan1327/Database_SQL_R_shiny.git" target="_blank" rel="noopener">Database Design</a></h4>
 												<p> Built a SQL Server database using data collected from Meetup, and developed an interactive <span style="color: #4acaa8"><a href="https://liyan1327.shinyapps.io/Like-minded_Database_Project/" target="_blank" rel="noopener">shiny application</a></span> to provide group and activity recommendations, visualize events information, and enable users to network effectively</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/visualization.png" alt="" onclick="return false;"/></a>
+											<a href="#" class="image" id="visual"><img src="images/visualization.png" alt="" onclick="return false;"/></a>
 											<div class="inner">
 												<h4><a href="https://public.tableau.com/profile/yan.li" target="_blank" rel="noopener">Data Visualization</a></h4>
 												<p>My Tableau Public Profile</p>
