--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Projects</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active" id="about">About</a></li>
+						<li><a href="#two" id="skill">Skills</a></li>
+						<li><a href="#three" id="project">Projects</a></li>
+						<li><a href="#four" id="contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
